[project]
name = "garden-cat-engine"
version = "4.8.11"
description = "A persistent multi-garden game with an AI REST API and a human visual web interface"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1,<4",
    "gunicorn>=23,<24",
    "psycopg2-binary>=2.9,<3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8,<9",
]
